jujugui/static/gui/src/app/components/panel/_panel.scss
.panel-component {
    @extend %floating-panel;
    position: absolute;
}

.panel-component.inspector-panel {
    position: static;
    background-color: transparent;
    border-radius: 0;
    box-shadow: none;
    z-index: index($z-indexed-elements, inspector-panel);
}

.panel-component.white-box {
    z-index: index($z-indexed-elements, white-box);
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(247, 247, 247, .7);
    border-radius: none;
    box-shadow: none;
}

.panel-component.deployment-bar-panel {
    right: 20px;
    bottom: 30px;
    z-index: index($z-indexed-elements, deployment-bar-panel);
}

.panel-component.env-list-panel {
  top: 40px;
  right: -230px;
}

